Refacter: refacter book and cart routes
