# app/routes/routes.js
@@ -11,17 +11,17 @@ module.exports = (app) => {
   app.post("/users/login", controller.login);
 
   // Book CURD api
-  app.post("/books/addbook", middleware.validateToken, helper.verifyRole, booksController.addBook);
-  app.get("/books/getallbook", middleware.validateToken, booksController.getAllBooks);
-  app.get("/books/getbook/:bookId", middleware.validateToken, booksController.getBook);
+  app.post("/books", middleware.validateToken, helper.verifyRole, booksController.addBook);
+  app.get("/books", middleware.validateToken, booksController.getAllBooks);
+  app.get("/books/:bookId", middleware.validateToken, booksController.getBook);
+  app.put("/books/:bookId", middleware.validateToken, helper.verifyRole, booksController.updateBook);
+  app.delete("/books/:bookId", middleware.validateToken, helper.verifyRole, booksController.deleteBook);
   app.get("/books/searchbook/:title", middleware.validateToken, booksController.searchBook);
-  app.put("/books/updatebook/:bookId", middleware.validateToken, helper.verifyRole, booksController.updateBook);
-  app.delete("/books/deletebook/:bookId", middleware.validateToken, helper.verifyRole, booksController.deleteBook);
 
   // Cart CURD api
-  app.post("/carts/addToCart/:bookId", middleware.validateToken, cartController.addToCart);
-  app.get("/carts/cart", middleware.validateToken, cartController.getAllCarts);
-  app.get("/carts/cart/:userId", middleware.validateToken, cartController.getCart);
-  app.put("/carts/placeOrder/:cartId", middleware.validateToken, cartController.placeOrder);
-  app.delete("/carts/removeBookFromCart", middleware.validateToken, cartController.removeBookFromCart);
+  app.post("/carts/:bookId", middleware.validateToken, cartController.addToCart);
+  app.get("/carts", middleware.validateToken, cartController.getAllCarts);
+  app.get("/carts/:userId", middleware.validateToken, cartController.getCart);
+  app.put("/carts/:cartId", middleware.validateToken, cartController.placeOrder);
+  app.delete("/carts", middleware.validateToken, cartController.removeBookFromCart);
 };
